--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">Clarence Taylor</span>
+                <span class="d-block d-lg-none">Savchuk Vladislav</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile-1.jpg" alt="..." /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -51,7 +51,7 @@
                     </div>
                     <h2 class="mb-5">Junior Frontend Developer</h2>
                     <p class="lead mb-5">
-                        I am a Junior Front End developer. I focus on
+                        I am a Junior Fullstack developer. I focus on
                         HTML5, CSS3, JS, React, English. Development,
                         practice and work for the result are important for
                         me. I am skillful in analyzing problems and
