--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         Ukraine · Vilnohirsk, +380638536757 ·
                         <a href="mailto:name@email.com">Salarisdan@gmail.com</a>
                     </div>
-                    <h2 class="mb-5">Junior Frontend Developer</h2>
+                    <h2 class="mb-5">Junior FullStack Developer</h2>
                     <p class="lead mb-5">
                         I am a Junior Fullstack developer. I focus on
                         HTML5, CSS3, JS, React, English. Development,
